--- a/src/styles/partials/_request.scss
+++ b/src/styles/partials/_request.scss
@@ -16,7 +16,7 @@
   min-height: 26.5625rem;
   top: 0rem;
   background: rgba(13, 41, 56, 0.8);
-  z-index: 1;
+  z-index: 5;
   cursor: default;
 
   ::-webkit-scrollbar {
